# imu_generator

./: .gitignore  CMakeLists.txt  README.md
data/: imu.csv  testdata-quart.txt
include/: BsplineSE3.h  Simulator.h  myInterface.h  my_utility.h  quat_ops.h
src/: BsplineSE3.cpp  Simulator.cpp  main.cpp  myInterface.cpp
src/generate_trajectory/: CMakeLists.txt  generate_traj.cpp  spline.h
src/matlab_plot/: compare_sim2real.m  plot_estimation.m  plot_imu.m  plot_trajectory.m
src/vicon_data_convertor/: convertor.cpp
